# PolishCalculator

./: .gitignore  Fraction.cpp  Fraction.h  Operator.h  PolishCalculator.cbp  ProcessInput.h  README.md  UniNum.cpp  UniNum.h  main.cpp  package.scm
src/: Fraction.cpp  Operator.cpp  StringTrimmer.h  UniNum.cpp  main.cpp  meson.build
